[project]
name = "realestateagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "ipykernel>=6.30.0",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.1",
    "uvicorn>=0.35.0",
]
