[project]
name = "realestateagent"
version = "0.1.0"
description = "Real Estate Agent Chatbot with FastAPI and LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.16",
    "langgraph>=0.0.20",
    "pydantic>=2.5.0",
    "typing-extensions>=4.8.0",
    "requests>=2.31.0",
    "langsmith>=0.0.69",
    "ipykernel>=6.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
